--- a/index2.html
+++ b/index2.html
@@ -98,6 +98,14 @@
         <li>
             4 коровы
         </li>
+
+        <li>
+            5 ЭУБЛЕФАР
+        </li>
+
+        <li>
+            6 Коты
+        </li>
     </ul>
 
 
